<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_stream">

        <io.github.vladimirmi.internetradioplayer.ui.SeekBarDialogPreference
            android:defaultValue="3"
            android:dialogMessage="@string/setting_initial_buffer_desc"
            android:key="INITIAL_BUFFER_LENGTH"
            android:title="@string/setting_initial_buffer"
            />

        <io.github.vladimirmi.internetradioplayer.ui.SeekBarDialogPreference
            android:defaultValue="6"
            android:dialogMessage="@string/setting_buffer_desc"
            android:key="BUFFER_LENGTH"
            android:title="@string/setting_buffer"
            />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_backup_restore">

        <Preference
            android:key="BACKUP_STATIONS"
            android:persistent="false"
            android:title="@string/setting_backup"
            />

        <Preference
            android:key="RESTORE_STATIONS"
            android:persistent="false"
            android:title="@string/setting_restore"
            />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_about">

        <Preference android:title="@string/setting_privacy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://vladimirmi.github.io/InternetRadioPlayer/"/>
        </Preference>

    </PreferenceCategory>


</PreferenceScreen>
