<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
        android:text="@string/help_create"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/help_create_1"
        android:textColorLink="@color/blue_500"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:padding="8dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_create_2"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:padding="8dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_create_3"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:padding="8dp"
        />

</LinearLayout>