<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CustomCard"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/genresLabelTv"
            style="@style/CustomText.Label"
            android:labelFor="@id/genresFl"
            android:text="@string/station_genre"
            />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/genresFl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:alignContent="flex_start"
            app:flexDirection="row"
            app:flexWrap="wrap"
            />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            >

            <TextView
                android:id="@+id/bitrateLabelTv"
                style="@style/CustomText.Label"
                android:layout_marginTop="16dp"
                android:labelFor="@id/bitrateTv"
                android:text="@string/station_bitrate"
                />

            <TextView
                android:id="@+id/sampleLabelTv"
                style="@style/CustomText.Label"
                android:layout_gravity="bottom"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:labelFor="@id/sampleTv"
                android:text="@string/station_sample_rate"
                />

            <TextView
                android:id="@+id/bitrateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:padding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                tools:text="128kbps"
                />

            <TextView
                android:id="@+id/sampleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:padding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                tools:text="22000Hz"
                />

            <TextView
                android:id="@+id/uriLabelTv"
                style="@style/CustomText.Label"
                android:labelFor="@id/uriTv"
                android:text="@string/station_uri"
                />

            <TextView
                android:id="@+id/uriTv"
                style="@style/CustomText.Link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                tools:text="www.google.com"
                android:textIsSelectable="true"
                />

            <TextView
                android:id="@+id/urlLabelTv"
                style="@style/CustomText.Label"
                android:layout_marginTop="16dp"
                android:labelFor="@id/urlTv"
                android:text="@string/station_url"
                />

            <TextView
                android:id="@+id/urlTv"
                style="@style/CustomText.Link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal|bottom"
                tools:text="www.google.com"
                />

        </GridLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
