<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary"
    >

    <ImageButton
        android:id="@+id/previousBt"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_skip_previous"
        android:contentDescription="@string/desc_skip_previous_button"
        android:foreground="?actionBarItemBackground"
        app:backgroundTint="@color/grey_50"
        app:layout_constraintEnd_toStartOf="@id/stopBt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/playPauseBtStub"
        tools:ignore="UnusedAttribute"
        />

    <ImageButton
        android:id="@+id/stopBt"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_stop"
        android:contentDescription="@string/desc_stop_button"
        android:foreground="?actionBarItemBackground"
        app:backgroundTint="@color/stop"
        app:layout_constraintEnd_toStartOf="@id/playPauseBtStub"
        app:layout_constraintStart_toEndOf="@id/previousBt"
        app:layout_constraintTop_toTopOf="@id/playPauseBtStub"
        tools:ignore="UnusedAttribute"
        />

    <Space
        android:id="@+id/playPauseBtStub"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/desc_play_pause_button"
        android:foreground="?actionBarItemBackground"
        app:layout_constraintBottom_toTopOf="@id/progressSb"
        app:layout_constraintEnd_toStartOf="@id/nextBt"
        app:layout_constraintStart_toEndOf="@id/stopBt"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute"
        />

    <io.github.vladimirmi.playerbutton.PlayerButton
        android:id="@+id/playPauseBt"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/desc_play_pause_button"
        android:foreground="?actionBarItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:pb_pauseColor="@color/pause"
        app:pb_playColor="@color/play"
        tools:ignore="UnusedAttribute"
        />

    <ImageButton
        android:id="@+id/nextBt"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_skip_next"
        android:contentDescription="@string/desc_skip_next_button"
        android:foreground="?actionBarItemBackground"
        app:backgroundTint="@color/grey_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/playPauseBtStub"
        app:layout_constraintTop_toTopOf="@id/playPauseBtStub"
        tools:ignore="UnusedAttribute"
        />

    <TextView
        android:id="@+id/simpleMetaTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="16dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Festus vigils ducunt ad gemna. Ubi est fidelis canis?"
        />

    <SeekBar
        android:id="@+id/progressSb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>